Add health check
Signed-off-by: Ivan Milosevic <iva@blokovi.com>

--- a/.env
+++ b/.env
@@ -81,6 +81,7 @@ MF_HTTP_ADAPTER_PORT=8185
 MF_MQTT_ADAPTER_LOG_LEVEL=debug
 MF_MQTT_ADAPTER_MQTT_PORT=1883
 MF_MQTT_BROKER_PORT=1883
+MF_MQTT_BROKER_HEALTH_CHECK=http://0.0.0.0:8888/health
 MF_MQTT_ADAPTER_WS_PORT=8080
 MF_MQTT_BROKER_WS_PORT=8080
 MF_MQTT_ADAPTER_ES_DB=0
